objects/pse__Forecast_Run_Info__c.object
<CustomObject>
    <description>For internal use only. An object to input the information required for the billing forecast calculation run.</description>
    <fields>
        <fullName>pse__Forecast_Calculation_Name__c</fullName>
        <label>Billing Forecast Calculation Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Billing Forecast Run Info</relationshipLabel>
        <relationshipName>Forecast_Run_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Billing Forecast Run Info</relationshipLabel>
        <relationshipName>Forecast_Run_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Billing Forecast Run Info</relationshipLabel>
        <relationshipName>Forecast_Run_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Time_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Period</label>
        <referenceTo>pse__Time_Period__c</referenceTo>
        <relationshipLabel>Billing Forecast Run Info</relationshipLabel>
        <relationshipName>Forecast_Run_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Billing Forecast Run Info</label>
    <nameField>
        <displayFormat>FRI-{000000}</displayFormat>
        <label>Billing Forecast Run Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Forecast Run Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>